# pyesn

./: pyproject.toml
configs/train/: tenfold.yaml
src/pyesn/runner/tenfold/: execution.py  main.py  setup.py
