[project]
name = "pyesn"
version = "0.1.0"
description = "A Python package for Echo State Network experiments." 
readme = "README.md" 

dependencies = [
    "numpy",
    "pandas",
    "opencv-python",
    "PyYAML",
    "omegaconf",
    "networkx"
]


[project.scripts]
pyesn = "pyesn.cli:main"

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-data]
pyesn = ["config_templates/**"]